--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
       <section>
         <div
-          class="mt-12 mb-40 carousel py-28 w-full bg-[rgba(231,111,81,0.10);"
+          class="mt-10 mb-40 carousel lg: py-28 w-full bg-[rgba(231,111,81,0.10)]"
         >
           <div id="slide1" class="carousel-item relative w-full">
             <div class="flex flex-col px-24 lg:flex-row lg:justify-between">
@@ -79,7 +79,7 @@
                 <h1 class="text-6xl text-black font-bold">
                   Ride-on R15 V4 with Smile
                 </h1>
-                <p class="text-xs">
+                <p class="text-xs font-normal w-auto">
                   Amet minim mollit non deserunt ullamco est sit aliqua dolor do
                   amet sint. Velit officia consequat duis enim velit mollit.
                 </p>
@@ -96,10 +96,425 @@
               <a href="#slide2" class="btn btn-circle">❯</a>
             </div>
           </div>
+          <div id="slide2" class="carousel-item relative w-full">
+            <div class="flex flex-col px-24 lg:flex-row lg:justify-between">
+              <div class="flex flex-col justify-center gap-5">
+                <h1 class="text-6xl text-black font-bold">
+                  Ride-on R15 V4 with Smile
+                </h1>
+                <p class="text-xs font-normal w-auto">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit mollit.
+                </p>
+                <button class="btn bg-[#E76F51] text-white w-40">
+                  Purchase
+                </button>
+              </div>
+              <img src="/images/slider/bike2.png" />
+            </div>
+            <div
+              class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+            >
+              <a href="#slide1" class="btn btn-circle">❮</a>
+              <a href="#slide3" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+          <div id="slide3" class="carousel-item relative w-full">
+            <div class="flex flex-col px-24 lg:flex-row lg:justify-between">
+              <div class="flex flex-col justify-center gap-5">
+                <h1 class="text-6xl text-black font-bold">
+                  Ride-on R15 V4 with Smile
+                </h1>
+                <p class="text-xs font-normal w-auto">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit mollit.
+                </p>
+                <button class="btn bg-[#E76F51] text-white w-40">
+                  Purchase
+                </button>
+              </div>
+              <img src="/images/slider/bike3.png" />
+            </div>
+            <div
+              class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+            >
+              <a href="#slide2" class="btn btn-circle">❮</a>
+              <a href="#slide4" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+          <div id="slide4" class="carousel-item relative w-full">
+            <div class="flex flex-col px-24 lg:flex-row lg:justify-between">
+              <div class="flex flex-col justify-center gap-5">
+                <h1 class="text-6xl text-black font-bold">
+                  Ride-on R15 V4 with Smile
+                </h1>
+                <p class="text-xs font-normal w-auto">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit mollit.
+                </p>
+                <button class="btn bg-[#E76F51] text-white w-40">
+                  Purchase
+                </button>
+              </div>
+              <img src="/images/slider/bike4.png" />
+            </div>
+            <div
+              class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+            >
+              <a href="#slide3" class="btn btn-circle">❮</a>
+              <a href="#slide1" class="btn btn-circle">❯</a>
+            </div>
+          </div>
         </div>
       </section>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <section class="max-w-[1140px] mx-auto">
+        <div class="flex flex-col justify-center mx-auto mb-12 text-center">
+          <h1 class="font-semibold text-5xl">Fetured Bikes In This Year</h1>
+          <p class="text-[#E76F51]">Best bike collection</p>
+          <hr class="text-[#E76F51] max-w-[58.5px]" />
+        </div>
+        <div class="flex flex-col lg:flex-row lg:justify-between mb-24">
+          <img src="/images/others/feature-bike.png" alt="" />
+          <img src="/images/others/feature-bike.png" alt="" />
+          <img src="/images/others/feature-bike.png" alt="" />
+        </div>
+        <h1 class="text-center text-[#0A0826] text-5xl">Latest News</h1>
+        <div class="flex flex-col gap-5 lg:flex-row">
+          <div class="card p bg-base-100 w-96 shadow-sm">
+            <figure class="px-5 pt-5">
+              <img
+                src="/images/others/latest1.png"
+                alt="Shoes"
+                class="rounded-xl"
+              />
+            </figure>
+            <div class="card-body px-5">
+              <h2 class="card-title text-[24px] font-semibold">
+                Ducati XDIAVEL S-73
+              </h2>
+              <p class="text-[#6C6C6C] text-[16px]">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions mt-10">
+                <button
+                  class="btn text-[#E76F51] border-[#E76F51] hover:bg-[#E76F51] hover:text-white"
+                >
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card bg-base-100 w-96 shadow-sm">
+            <figure class="px-5 pt-5">
+              <img
+                src="/images/others/latest2.png"
+                alt="Shoes"
+                class="rounded-xl"
+              />
+            </figure>
+            <div class="card-body px-5">
+              <h2 class="card-title text-[24px] font-semibold">
+                Motorcycles & Scooters
+              </h2>
+              <p class="text-[#6C6C6C] text-[16px]">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions mt-10">
+                <button
+                  class="btn text-[#E76F51] border-[#E76F51] hover:bg-[#E76F51] hover:text-white"
+                >
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card bg-base-100 w-96 shadow-sm">
+            <figure class="px-5 pt-5">
+              <img
+                src="/images/others/latest3.png"
+                alt="Shoes"
+                class="rounded-xl"
+              />
+            </figure>
+            <div class="card-body px-5">
+              <h2 class="card-title text-[24px] font-semibold">
+                2021 Honda CBR500R
+              </h2>
+              <p class="text-[#6C6C6C] text-[16px]">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions mt-10">
+                <button
+                  class="btn text-[#E76F51] border-[#E76F51] hover:bg-[#E76F51] hover:text-white"
+                >
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <h2 class="text-center text-5xl mt-[130px] mb-[50px]">
+          Happy <span class="text-[#E76F51]">Client Says</span>
+        </h2>
+        <div
+          class="flex flex-col mx-auto mb-[130px] gap-11 lg:flex-row lg:justify-center"
+        >
+          <div
+            class="card w-80 bg-base-100 shadow-xl hover:shadow-2xl transition duration-300"
+          >
+            <figure class="px-10 pt-10">
+              <img
+                src="/images/others/user-1.png"
+                alt="Profile"
+                class="rounded-full w-24 h-24 object-cover"
+              />
+            </figure>
+            <div class="card-body items-center text-center">
+              <p class="text-gray-600">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+
+              <div class="rating rating-sm mt-3 pointer-events-none">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+
+              <h2 class="mt-3 font-semibold text-[#23A6F0]">Regina Miles</h2>
+              <p class="text-gray-800 font-bold">Banker</p>
+            </div>
+          </div>
+          <div
+            class="card w-80 bg-base-100 shadow-xl hover:shadow-2xl transition duration-300"
+          >
+            <figure class="px-10 pt-10">
+              <img
+                src="/images/others/user-1.png"
+                alt="Profile"
+                class="rounded-full w-24 h-24 object-cover"
+              />
+            </figure>
+            <div class="card-body items-center text-center">
+              <p class="text-gray-600">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+
+              <div class="rating rating-sm mt-3 pointer-events-none">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+
+              <h2 class="mt-3 font-semibold text-[#23A6F0]">Regina Miles</h2>
+              <p class="text-gray-800 font-bold">Banker</p>
+            </div>
+          </div>
+          <div
+            class="card w-80 bg-base-100 shadow-xl hover:shadow-2xl transition duration-300"
+          >
+            <figure class="px-10 pt-10">
+              <img
+                src="/images/others/user-1.png"
+                alt="Profile"
+                class="rounded-full w-24 h-24 object-cover"
+              />
+            </figure>
+            <div class="card-body items-center text-center">
+              <p class="text-gray-600">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+
+              <div class="rating rating-sm mt-3 pointer-events-none">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+
+              <h2 class="mt-3 font-semibold text-[#23A6F0]">Regina Miles</h2>
+              <p class="text-gray-800 font-bold">Banker</p>
+            </div>
+          </div>
+        </div>
+        <h2 class="text-center text-5xl mb-[50px]">
+          Frequently Asked <span class="text-[#E76F51]">Questions</span>
+        </h2>
+        <div
+          class="flex flex-col gap-[92px] mx-auto lg:flex-row justify-between"
+        >
+          <div><img src="/images/others/faq.png" alt="" /></div>
+          <div class="lg:max-w-[552px]">
+            <div
+              class="collapse collapse-arrow bg-base-100 border border-base-300"
+            >
+              <input type="radio" name="my-accordion-2" checked="checked" />
+              <div class="collapse-title font-semibold text-[20px]">
+                What are the most important things I should know about riding a
+                bike?
+              </div>
+              <div class="collapse-content text-[16px]">
+                Safety First! Always obey the rules of the road. Obey all
+                traffic signals, signs, and laws. Get in the mindset of
+                “driving” your bike—not just “riding” your bike. This will help
+                you be a more focused and legally compliant bike rider.
+              </div>
+            </div>
+            <div
+              class="collapse collapse-arrow bg-base-100 border border-base-300"
+            >
+              <input type="radio" name="my-accordion-2" />
+              <div class="collapse-title font-semibold">
+                How can I tell if my helmet is old and I need a new one?
+              </div>
+              <div class="collapse-content text-sm">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id
+                ipsa quod fugit!
+              </div>
+            </div>
+            <div
+              class="collapse collapse-arrow bg-base-100 border border-base-300"
+            >
+              <input type="radio" name="my-accordion-2" />
+              <div class="collapse-title font-semibold">
+                My bike has been in storage is it safe to ride?
+              </div>
+              <div class="collapse-content text-sm">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam
+                nesciunt commodi eveniet.
+              </div>
+            </div>
+            <div
+              class="collapse collapse-arrow bg-base-100 border border-base-300"
+            >
+              <input type="radio" name="my-accordion-2" />
+              <div class="collapse-title font-semibold">
+                What rules should I follow when riding my bike?
+              </div>
+              <div class="collapse-content text-sm">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error,
+                sint?
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer
+      class="footer sm:footer-horizontal bg-base-300 text-base-content p-10"
+    >
+      <div
+        class="flex flex-col px-[165px] md:flex-row lg:flex-row lg:justify-between"
+      >
+        <div>
+          <nav class="flex justify-between">
+            <a class="link link-hover">Download Now</a>
+            <a class="link link-hover">License</a>
+          </nav>
+          <nav>
+            <a class="link link-hover">About us</a>
+            <a class="link link-hover">Contact</a>
+            <a class="link link-hover">Jobs</a>
+            <a class="link link-hover">Press kit</a>
+          </nav>
+        </div>
+
+        <nav>
+          <h6 class="footer-title">Get the App</h6>
+          <div class="flex flex-col gap-4">
+            <a>
+              <img class="w-[135px]" src="/images/others/android.png" alt="" />
+            </a>
+            <a>
+              <img class="w-[135px]" src="/images/others/android.png" alt="" />
+            </a>
+          </div>
+        </nav>
+      </div>
+    </footer>
   </body>
 </html>
