--- a/index.html
+++ b/index.html
@@ -279,37 +279,14 @@
                 Slate helps you see how many more days you need to work to reach
                 your financial goal for the month and year.
               </p>
-
-              <div class="rating rating-sm mt-3 pointer-events-none">
-                <input
-                  type="radio"
-                  name="rating-2"
-                  class="mask mask-star-2 bg-orange-400"
-                  checked
-                />
-                <input
-                  type="radio"
-                  name="rating-2"
-                  class="mask mask-star-2 bg-orange-400"
-                  checked
-                />
-                <input
-                  type="radio"
-                  name="rating-2"
-                  class="mask mask-star-2 bg-orange-400"
-                  checked
-                />
-                <input
-                  type="radio"
-                  name="rating-2"
-                  class="mask mask-star-2 bg-orange-400"
-                  checked
-                />
-                <input
-                  type="radio"
-                  name="rating-2"
-                  class="mask mask-star-2 bg-orange-400"
-                />
+              <div
+                class="flex justify-center mt-3 text-orange-400 space-x-1 text-lg"
+              >
+                <img src="/images/icons/star-solid.svg" alt="" />
+                <img src="/images/icons/star-solid.svg" alt="" />
+                <img src="/images/icons/star-solid.svg" alt="" />
+                <img src="/images/icons/star-solid.svg" alt="" />
+                <img src="/images/icons/star-regular.svg" alt="" />
               </div>
 
               <h2 class="mt-3 font-semibold text-[#23A6F0]">Regina Miles</h2>
@@ -331,37 +308,14 @@
                 Slate helps you see how many more days you need to work to reach
                 your financial goal for the month and year.
               </p>
-
-              <div class="rating rating-sm mt-3 pointer-events-none">
-                <input
-                  type="radio"
-                  name="rating-2"
-                  class="mask mask-star-2 bg-orange-400"
-                  checked
-                />
-                <input
-                  type="radio"
-                  name="rating-2"
-                  class="mask mask-star-2 bg-orange-400"
-                  checked
-                />
-                <input
-                  type="radio"
-                  name="rating-2"
-                  class="mask mask-star-2 bg-orange-400"
-                  checked
-                />
-                <input
-                  type="radio"
-                  name="rating-2"
-                  class="mask mask-star-2 bg-orange-400"
-                  checked
-                />
-                <input
-                  type="radio"
-                  name="rating-2"
-                  class="mask mask-star-2 bg-orange-400"
-                />
+              <div
+                class="flex justify-center mt-3 text-orange-400 space-x-1 text-lg"
+              >
+                <img src="/images/icons/star-solid.svg" alt="" />
+                <img src="/images/icons/star-solid.svg" alt="" />
+                <img src="/images/icons/star-solid.svg" alt="" />
+                <img src="/images/icons/star-solid.svg" alt="" />
+                <img src="/images/icons/star-regular.svg" alt="" />
               </div>
 
               <h2 class="mt-3 font-semibold text-[#23A6F0]">Regina Miles</h2>
@@ -383,37 +337,14 @@
                 Slate helps you see how many more days you need to work to reach
                 your financial goal for the month and year.
               </p>
-
-              <div class="rating rating-sm mt-3 pointer-events-none">
-                <input
-                  type="radio"
-                  name="rating-2"
-                  class="mask mask-star-2 bg-orange-400"
-                  checked
-                />
-                <input
-                  type="radio"
-                  name="rating-2"
-                  class="mask mask-star-2 bg-orange-400"
-                  checked
-                />
-                <input
-                  type="radio"
-                  name="rating-2"
-                  class="mask mask-star-2 bg-orange-400"
-                  checked
-                />
-                <input
-                  type="radio"
-                  name="rating-2"
-                  class="mask mask-star-2 bg-orange-400"
-                  checked
-                />
-                <input
-                  type="radio"
-                  name="rating-2"
-                  class="mask mask-star-2 bg-orange-400"
-                />
+              <div
+                class="flex justify-center mt-3 text-orange-400 space-x-1 text-lg"
+              >
+                <img src="/images/icons/star-solid.svg" alt="" />
+                <img src="/images/icons/star-solid.svg" alt="" />
+                <img src="/images/icons/star-solid.svg" alt="" />
+                <img src="/images/icons/star-solid.svg" alt="" />
+                <img src="/images/icons/star-regular.svg" alt="" />
               </div>
 
               <h2 class="mt-3 font-semibold text-[#23A6F0]">Regina Miles</h2>
@@ -485,29 +416,32 @@
       </section>
     </main>
     <footer
-      class="footer sm:footer-horizontal bg-base-300 text-base-content p-10"
+      class="footer sm:footer-horizontal bg-[#0B0D17] mt-[130px] text-base-content p-10"
     >
       <div
-        class="flex flex-col px-[165px] md:flex-row lg:flex-row lg:justify-between"
+        class="text-white flex flex-col px-[165px] md:flex-row lg:flex-row lg:justify-between lg:gap-[475px]"
       >
         <div>
-          <nav class="flex justify-between">
+          <nav class="flex gap-6 mb-3">
             <a class="link link-hover">Download Now</a>
             <a class="link link-hover">License</a>
           </nav>
-          <nav>
-            <a class="link link-hover">About us</a>
-            <a class="link link-hover">Contact</a>
-            <a class="link link-hover">Jobs</a>
-            <a class="link link-hover">Press kit</a>
+          <nav class="flex gap-6 mb-3">
+            <a class="link link-hover">About </a>
+            <a class="link link-hover">Features</a>
+            <a class="link link-hover">Pricing</a>
+            <a class="link link-hover">Careers</a>
+            <a class="link link-hover">Help</a>
+            <a class="link link-hover">PrivacyPolicy</a>
           </nav>
+          <p>© 2020 bike. All rights reserved</p>
         </div>
 
         <nav>
           <h6 class="footer-title">Get the App</h6>
           <div class="flex flex-col gap-4">
             <a>
-              <img class="w-[135px]" src="/images/others/android.png" alt="" />
+              <img class="w-[135px]" src="/images/others/ios.png" alt="" />
             </a>
             <a>
               <img class="w-[135px]" src="/images/others/android.png" alt="" />
